# mink-warp

./: .gitignore  CITATION.bib  CITATION.cff  LICENSE  Makefile  README.md  RELEASING.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml
benchmarks/: README.md  RESULTS.md  bench_constrained.py  bench_ik.py  bench_osqp.py  bench_parity.py  bench_solvers.py  bench_tasks.py  common.py  scenes.py
docs/: BUILDING.md  conf.py  index.rst  installation.rst  references.bib  references.rst
docs/_build/: .buildinfo  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  references.html  search.html  searchindex.js
docs/_build/.doctrees/: index.doctree  installation.doctree  references.doctree
docs/_build/.doctrees/__intersphinx_cache__/: mujoco_objects.inv
docs/_build/_modules/: index.html
docs/_build/_sources/: index.rst  installation.rst
docs/_build/_sources/source/: roadmap.rst
docs/_build/source/: benchmarks.html  examples.html  roadmap.html
docs/_static/: refs.css
docs/source/: benchmarks.rst  examples.rst  roadmap.rst
docs/source/api/: inverse_kinematics.rst  lie.rst  limits.rst  solvers.rst  tasks.rst  utilities.rst
docs/source/concepts/: architecture.rst  index.rst  mink_parity.rst  notation.rst  why_mink_warp.rst
docs/source/tutorial/: index.rst  tasks_and_limits.rst
docs/source/workflows/: batched_ik.rst  constrained.rst  cuda_graphs.rst  quickstart.rst  solvers.rst
examples/: 01_panda_ik.py  02_constrained_ur5e.py  03_equality_cassie.py  04_self_collision_dual_iiwa.py  05_relative_frame_g1.py  _viser_utils.py  batched_g1_ik.py  batched_panda_ik.py  constrained_ur5e.py  equality_cassie.py  relative_frame_g1.py  self_collision_dual_panda.py
examples/docs/: quickstart.py
examples/franka_emika_panda/: mjx_scene.xml
examples/universal_robots_ur5e/: scene_wrist_cam.xml
src/mink_warp/: __init__.py  configuration.py  constants.py  exceptions.py  integrate.py  interop.py  solve_ik.py  solver_kernels.py  utils.py
src/mink_warp/kernels/: __init__.py  collision.py  com.py  constrained.py  frame.py  lbfgs.py  limits.py  lm.py  posture.py  residual.py  solver.py
src/mink_warp/lie/: __init__.py  kernels.py  se3.py  so3.py  utils.py  wp_ops.py
src/mink_warp/limits/: __init__.py  collision_avoidance.py  configuration_limit.py  limit.py  linear_inequality.py  velocity_limit.py
src/mink_warp/solvers/: __init__.py  base.py  constrained.py  dls.py  lbfgs.py  lm.py
src/mink_warp/tasks/: __init__.py  com_task.py  damping_task.py  equality_constraint_task.py  frame_task.py  joint_limit_task.py  posture_task.py  relative_frame_task.py  task.py
tests/: conftest.py  helpers_admm.py  smoke_test.py  test_admm_reference.py  test_benchmarks_smoke.py  test_collision_avoidance_limit.py  test_com_task_parity.py  test_configuration_limit_task.py  test_configuration_parity.py  test_constrained_solver.py  test_docs.py  test_equality_constraint_task_parity.py  test_frame_task_parity.py  test_inequality_constraints.py  test_integrate.py  test_lie_parity.py  test_limits.py  test_posture_task_parity.py  test_relative_frame_task_parity.py  test_solve_ik_parity.py  test_solvers.py
(+70 files in other folders)
